Added code to extract links